tests/NormalTests/paczka1/fuzzy1/37916651.err
Error in line 3: SatbeT S643 10,8
Error in line 6: S643 A890 7,3
Error in line 11: IcYgWYZfKUi A890 75,2
Error in line 34: S643 A57 185,1
Error in line 32: SatbeT S643 80,7
Error in line 39: SatbeT A57 32,4
